--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar__wrapper">
         <div class="wrapper__logo">
             <img class="img__1block" src="1block/path0.png" alt="logo">
-            <p class="p__text" >wildlife</p>
+            <p class="p__text">wildlife!!!</p>
         </div>
         <div class="wrapper_navbar">
                 <ul class="list">
